--- a/frontend_news/package.json
+++ b/frontend_news/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.10.1",
     "@react-navigation/stack": "^6.4.1",
+    "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.2",
     "cheerio": "^1.0.0-rc.12",
     "expo": "~51.0.22",
